--- a/backend/Saboreie/templates/home.html
+++ b/backend/Saboreie/templates/home.html
@@ -10,6 +10,11 @@
     </head>
     <body>
         <h1>Home Page</h1>
+            {%if request.user.is_authenticated%}
+            <a href="{% url 'logout' %}">Logout</a>
+            {% else %}
+            <a href="{% url 'paginaLogin' %}">Login</a>
+            {%endif%}
         <script src="" async defer></script>
     </body>
 </html>
