--- a/backend/Saboreie/autenticacao/templates/autenticacao/login.html
+++ b/backend/Saboreie/autenticacao/templates/autenticacao/login.html
@@ -16,6 +16,8 @@
 
         <input type="submit" value="Login"/>
 
+        <label>Não tem uma conta? Registre-se</label>
+        <a href="{% url 'registrarUser' %}" title="Registrar">Registrar</a>
     </form>
 
     {% if messages %}
