--- a/backend/Saboreie/templates/home.html
+++ b/backend/Saboreie/templates/home.html
@@ -14,6 +14,7 @@
             <a href="{% url 'logout' %}">Logout</a>
             {% else %}
             <a href="{% url 'paginaLogin' %}">Login</a>
+            <a href="{% url 'registrarUser' %}">Registrar</a>
             {%endif%}
         <script src="" async defer></script>
     </body>
