--- a/backend/Saboreie/autenticacao/templates/autenticacao/login.html
+++ b/backend/Saboreie/autenticacao/templates/autenticacao/login.html
@@ -1,4 +1,4 @@
-{%block title%}
+<!--- {%block title%}
 <title>Login</title>
 {%endblock title%}
 
@@ -29,4 +29,41 @@
     {% endif %}
 </div>
 
-{%endblock content%}
+{%endblock content%} --->
+
+<!doctype html>
+<html lang="pt-br">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Login</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="mb-3" style="width: 100%; height: 100px; background-color: black; color: rgb(255, 204, 0); display: flex; align-items: center; justify-content: center;">
+    <h1>Saborize</h1>
+  </div>
+
+  <form method="POST" action="">
+    <div class="mb-3 mx-auto" style="width: 30%; height: 100px;">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="mb-3 mx-auto"  style="width: 30%; height: 100px;">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1">
+    </div>
+    <button type="submit" class="btn btn-warning position-absolute top-30 start-50 translate-middle">Submit</button>
+  </form>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous">
+  </script>
+</html>
