--- a/backend/Saboreie/templates/base.html
+++ b/backend/Saboreie/templates/base.html
@@ -7,7 +7,12 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
     
       <title>{% block title %}Saborize{% endblock title %}</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
+      <!-- Link para fonte do cabeçalho -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&display=swap" rel="stylesheet">
+
     
       <style>
             /* Cores personalizadas */
@@ -17,6 +22,8 @@
             .navbar-custom .navbar-brand,
             .navbar-custom .nav-link {
                 color: #FFD700; /* Amarelo */
+                font-family: "Changa One", sans-serif; 
+                font-style: normal;
             }
             .navbar-custom .nav-link:hover {
                 color: #fff200; /* Amarelo mais claro no hover */
@@ -35,7 +42,7 @@
                 background-color: #e6c200;
                 color: #000000;
             }
-        </style>
+        </style>    
     
     </head>
     
