--- a/backend/Saboreie/templates/home.html
+++ b/backend/Saboreie/templates/home.html
@@ -7,7 +7,7 @@
     <!-- Configuração do Layout da Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container">
-            <a class="navbar-brand" href="#">SABORIZE</a>
+            <a class="navbar-brand" href="{% url 'home' %}">SABORIZE</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
